Added my project

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      { "src": "/api/v1/user/.*", "dest": "/index.js" },
-      { "src": "/api/v1/job/.*", "dest": "/index.js" },
-      { "src": "/api/v1/careers/.*", "dest": "/index.js" },
-      { "src": "/api/v1/save/.*", "dest": "/index.js" },
-      { "src": "/test", "dest": "/index.js" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "server.js" }
+  ]
+}
