--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/api" }
+    { "src": "/(.*)", "dest": "/index.js" }
   ]
 }
