--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "datauri": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
